# TopFarm2

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .zenodo.json  README  README.md  cost_model_wrappers.py  git_utils.py  install.bat  install_githooks.bat  install_topfarm.bat  pyproject.toml  reverse_install.bat  run_pycodestyle.bat  run_test_topfarm_windows.bat  setup.cfg  setup.py  topfarm.py
_notebooks/: make_notebooks.py  notebook.py
_notebooks/elements/: bathymetry.ipynb  constraints.ipynb  cost_models.ipynb  drivers.ipynb  layout_and_loads.ipynb  loads.ipynb  problems.ipynb  roads_and_cables.ipynb  wake_steering_and_loads.ipynb
constraint_components/: boundary_component.py
core/: cost_model_wrappers.py  plotting.py  topfarm.py
core/constraint_components/: boundary_component.py
cost_models/: dummy.py
cost_models/fuga/: pascal_dll.py  py_fuga.py
cost_models/fuga/tests/: test_pyfuga.py
docker/: Dockerfile  Dockerfile_simple  howto_docker.txt  install_ipopt2.sh  requirements2.txt  requirements_simple.txt
docs/: Makefile  advanced_examples.rst  api.rst  basic_examples.rst  conf.py  index.rst  installation.rst  make.bat  pub_related.rst  pub_theses.rst  pub_tool.rst
docs/_static/: Overview.vsdx  custom.css
docs/api_reference/: constraints.rst  cost.rst  drivers.rst  dtucost.rst
docs/notebooks/: Do_not_add_notebooks_here_manually.txt  MongoDB_recorder.ipynb  bathymetry.ipynb  cables.ipynb  constraints.ipynb  cost_models.ipynb  design_variables.ipynb  drivers.ipynb  economic_cost_models.ipynb  example_randomize_type_and_position_with_specific_boundaries.ipynb  exclusion_zones.ipynb  external_drivers.ipynb  hub_height_optimization.ipynb  joint_multi_wf_optimization.ipynb  layout_and_loads.ipynb  loads.ipynb  neighbouring_turbines.ipynb  nested_optimization_type_and_positions.ipynb  openmdao_checks.out  problems.ipynb  regular_grid_optimization.ipynb  roads_and_cables.ipynb  sgd_slsqp_comparison.ipynb  smart_start_with_predefined_types.ipynb  turbine_specific_boundaries.ipynb  unconstrained_wake_steering.ipynb  wake_steering_and_loads.ipynb  wind_farm_cluster.ipynb
docs/publications/related/: pub_000.rst  pub_005.rst  pub_007.rst  pub_008.rst  pub_009.rst
docs/publications/theses/: thesis_1.rst  thesis_2.rst  thesis_3.rst  thesis_4.rst  thesis_5.rst  thesis_6.rst  thesis_7.rst  thesis_8.rst  thesis_9.rst
docs/publications/tool/: pub_2.rst
docs/source/: advanced_examples.rst  api.rst  basic_examples.rst  conf.py  examples.rst  index.rst  installation.rst  reference_guide.rst  user_guide.rst  using_topfarm.rst
docs/source/advanced_examples_nblinks/: bathymetry_nb.nblink  exclusion_zones_nb.nblink  hub_height_optimization_nb.nblink  layout_and_loads_nb.nblink  openmdao_checks.out  unconstrained_wake_steering_nb.nblink  wake_steering_and_loads_nb.nblink
docs/source/api_reference/: cost.rst  dtucost.rst  plotcomp.rst
docs/source/basic_examples_nblinks/: cost_models_nb.nblink  design_variables_nb.nblink
example_data/: hornsrev1.py
examples/: example_1_constrained_layout_optimization.py  example_2_wake_comparison.py  example_3_turbine_type_optimization.py
examples/docs/: example_10_mongodb.py  example_14_regular_grid_optimization.py  example_15_sgd_driver.py  example_1_constrained_layout_optimization.py  example_2_wake_comparison.py  example_3_turbine_type_optimization.py  example_4_integrated_optimization_aep_and_irr.py  example_5_integrated_opt_with_dtu_cost_model.py  example_6_floris.py  example_7_parallel_cost_comp_mpi.py  example_8_irr_opt_with_capacityconst_turbine_type.py  example_9_irr_opt_on_weibull_site.py
examples/irp_wind/: Hornsrev_aep.py  optimization_3tb.py
examples/optimization_course/: exclusion_zones.py  layout_and_bathymetry.py
examples/scripts/: example_10_mongodb.py  example_13_automatic_differentiation.py  example_14_regular_grid_optimization.py  example_15_sgd_driver.py  example_16_smart_start_types.py  example_1_constrained_layout_optimization.py  example_2_wake_comparison.py  example_3_turbine_type_optimization.py  example_4_integrated_optimization_aep_and_irr.py  example_5_integrated_opt_with_dtu_cost_model.py  example_8_irr_opt_with_capacityconst_turbine_type.py  example_9_irr_opt_on_weibull_site.py
examples/workshop/: workshop_competition.ipynb
tests/: test_FusedWakeModels.py  test_topfarm.py  test_try_me.py  test_with_dummy.py
tests/test_constraint/: test_boundary.py
tests/test_costmodel_utils/: test_aep_calculator.py  test_wind_resource.py
tests/test_files/: __init__.py
tests/test_fuga/: test_lib_reader.py  test_pyfuga.py  test_turbine_site_list_reader.py
tests/test_fusedwake_models/: test_gcl.py  test_noj.py
tests/topfarm/: test_drivers.py  test_topfarm.py
topfarm/: __init__.py  _topfarm.py  deprecated_mongo_recorder.py  deprecated_topfarm_problems.py  deprectated_topfarm_problems.py  easy_drivers.py  mongo_recorder.py  multistart.py  parallel_runner.py  plotting.py  recorders.py  recording.py  topfarm.py  utils.py  wind_farm_cluster.py  workshop.py
topfarm/constraint_components/: __init__.py  _constraint.py  boundary.py  boundary_component.py  capacity.py  constrained_generator.py  constraint_aggregation.py  deprecated_boundary_component.py  load.py  penalty_component.py  post_constraint.py  spacing.py  spacing_component.py
topfarm/cost_models/: aggregated_cost.py  cost_model_wrappers.py  dummy.py  fused_wake_wrappers.py  py_wake_wrapper.py  topfarm_components.py
topfarm/drivers/: MySimpleGADriver.py  genetic_algorithm_driver.py  my_simple_ga_driver.py  random_search_driver.py  stochastic_gradient_descent_driver.py
topfarm/examples/: __init__.py  bathymetry_ficticio.py  energy_island.py
topfarm/tests/: __init__.py  conftest.py  notebook.py  test_examples.py  test_main.py  test_multi_wf_opt.py  test_notebooks.py  test_topfarm_cluster.py  test_try_me.py  test_version.py  test_with_dummy.py  utils.py
(+143 files in other folders)
