[project]
authors = [{ name = "DTU Wind Energy", email = "mikf@dtu.dk" }]
name = "topfarm"
description = "Topfarm - Wind Farm Optimization using OpenMDAO"
license = "MIT"
readme = { file = "README", content-type = "text/x-rst" }
requires-python = ">=3.9,<3.13"
dynamic = ["version"]
dependencies = [
    "py-wake>=2.6.5,<3",
    "jupyterlab>=4.2.5,<5",
    "pydoe3>=1.0.4,<2",
    "pydoe2>=1.3.0,<2",
    "shapely>=2.0.6,<3",
    "openmdao>=3.27,<33.9",
    "matplotlib>=3.7.5,<4",
    "numpy>=1.24.3,<3",
    "numpy-financial>=1.0.0,<2",
    "scipy>=1.10.1,<2",
    "scikit-learn>=1.3.2,<2",
]
optional-dependencies = { tensorflow = ["tensorflow>=2.13.1,<3"] }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "topfarm/_version.py"

[tool.hatch.version.raw-options]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["topfarm"]

[tool.pytest.ini_options]
norecursedirs = ["topfarm/tests/deprecated_tests", "topfarm/tests/test_fuga"]
testpaths = "topfarm/tests"
addopts = "--cov-report=term-missing:skip-covered --cov-report=html --cov=topfarm --dist=worksteal"

[tool.coverage.run]
omit = [
    "*/Colonel/*",
    "topfarm/tests/*",
    "topfarm/workshop.py",
    "topfarm/deprecated_mongo_recorder.py",
    "topfarm/deprecated_topfarm_problems.py",
    "topfarm/constraint_components/deprecated_boundary_component.py",
    "topfarm/_version.py",
    "topfarm/cost_models/fuga/*",
]

[tool.coverage.report]
fail_under = 90

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
pytest-xdist = ">=3.6.1,<4"
pytest = ">=8.3.3,<9"
pytest-cov = ">=5.0.0,<6"
sphinx = ">=7.4.7,<8"
sphinx_rtd_theme = ">=3.0.1,<4"
mock = ">=5.1.0,<6"
hatch = ">=1.13.0,<2"
autopep8 = ">=2.3.1,<3"
git = ">=2.47.0,<3"
pre-commit = ">=4.0.1,<5"
pip = ">=24.3.1,<25"
make = ">=4.4.1,<5"
pandoc = ">=3.5,<4"
pypandoc = ">=1.14,<2"
nbsphinx = ">=0.9.5,<0.10"
nbconvert = ">=7.16.4,<8"
ffmpeg = ">=7.1.0,<8"
netcdf4 = ">=1.7.2,<2"
hdf5 = ">=1.14.4,<2"

[tool.pixi.pypi-dependencies]
topfarm = { path = ".", editable = true }

[tool.pixi.feature.python39]
dependencies = { python = "3.9.*", pyoptsparse = ">=2.11.3,<3" }
tasks = { test39 = "pytest -n auto" }
pypi-dependencies = { ed_win = { git = "https://gitlab.windenergy.dtu.dk/TOPFARM/edwin.git", extras = [
    "interarray",
] } }

[tool.pixi.feature.python310]
dependencies = { python = "3.10.*", pyoptsparse = ">=2.11.3,<3" }
tasks = { test310 = "pytest -n auto" }

[tool.pixi.feature.python311]
dependencies = { python = "3.11.*", pyoptsparse = ">=2.11.3,<3" }
tasks = { test311 = "pytest -n auto" }

[tool.pixi.feature.python312]
dependencies = { python = "3.12.*", numpy = ">2.0,<3" }
tasks = { test312 = "pytest -n auto" }

[tool.pixi.environments]
py39 = ["python39"]
py310 = ["python310"]
py311 = ["python311"]
py312 = ["python312"]

[tool.pixi.tasks]
test-all = { depends-on = ["test311", "test310", "test39"] }
test-latest = { depends-on = ["test312"] }
